hiiii some smol cleanup and templates

--- a/templates/login.tmpl
+++ b/templates/login.tmpl
@@ -5,10 +5,10 @@
   </head>
   <body>
     <p>hiiiii</p>
-    <form action="/signup" method="post">
+    <form action="/login" method="post">
       <p><input type="email" name="email" /></p>
       <p><input type="password" name="password" /></p>
-      <p><button type="submit">Request access</button></p>
+      <p><button type="submit">Log in</button></p>
     </form>
   </body>
 </html>
