--- a/templates/home.tmpl
+++ b/templates/home.tmpl
@@ -1,3 +1,6 @@
 {{ template "head.tmpl" . }}
-fdsasdf
+{{ if . }}
+{{ else }}
+    {{ template "signup_form.tmpl" }}
+{{ end }}
 {{ template "foot.tmpl" }}
