--- a/templates/login.tmpl
+++ b/templates/login.tmpl
@@ -1,14 +1,7 @@
-<!doctype html>
-<html>
-  <head>
-    <title>hello</title>
-  </head>
-  <body>
-    <p>hiiiii</p>
-    <form action="/login" method="post">
-      <p><input type="email" name="email" /></p>
-      <p><input type="password" name="password" /></p>
-      <p><button type="submit">Log in</button></p>
-    </form>
-  </body>
-</html>
+{{ template "head.tmpl" }}
+<form action="/login" method="post">
+  <p><input type="email" name="email" /></p>
+  <p><input type="password" name="password" /></p>
+  <p><button type="submit">Log in</button></p>
+</form>
+{{ template "foot.tmpl" }}
