--- a/templates/signup.tmpl
+++ b/templates/signup.tmpl
@@ -1,14 +1,3 @@
-<!doctype html>
-<html>
-  <head>
-    <title>hello</title>
-  </head>
-  <body>
-    <p>hiiiii</p>
-    <form action="/signup" method="post">
-      <p><input type="email" name="email" /></p>
-      <p><input type="password" name="password" /></p>
-      <p><button type="submit">Request access</button></p>
-    </form>
-  </body>
-</html>
+{{ template "head.tmpl" }}
+{{ template "signup_form.tmpl" . }}
+{{ template "foot.tmpl" }}
