--- a/templates/domains.tmpl
+++ b/templates/domains.tmpl
@@ -1,5 +1,6 @@
 {{ range . }}
     <p>domain... {{ . }}</p>
 {{ else }}
-    <p>no domains. <a href="/new-domain">add domain</a></p>
+    <p>no domains.</p>
 {{ end }}
+<p><a href="/new-domain">add domain</a></p>
