--- a/templates/head.tmpl
+++ b/templates/head.tmpl
@@ -3,6 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <title>beep beep! traffic counter, privacy-first</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/static/light.min.css" />
+  <link rel="stylesheet" href="/static/style.css" />
 </head>
 <body>
   <header>
