--- a/templates/foot.tmpl
+++ b/templates/foot.tmpl
@@ -1,3 +1,3 @@
-<footer>byeee</footer>
+<footer>&copy; 2020 beep-beep.net. <a href="/privacy" title="Privacy policy">privacy</a>. <a href="/contact" title="Contact us">contact</a>.</footer>
 </body>
 </html>
