--- a/templates/head.tmpl
+++ b/templates/head.tmpl
@@ -3,16 +3,22 @@
 <head>
   <meta charset="utf-8" />
   <title>beep beep! traffic counter, privacy-first</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="/static/light.min.css" />
   <link rel="stylesheet" href="/static/style.css" />
 </head>
 <body>
   <header>
     <h1><a href="/">beep beep</a></h1>
-    {{ if . }}
-      {{ .Email }} <a href="/logout">log out</a>
-    {{ else }}
-      <a href="/login">log in</a>
-    {{ end }}
+    <nav>
+      <ul>
+        {{ if . }}
+          <li>{{ .Email }}</li>
+          <li><a href="/logout">log out</a></li>
+        {{ else }}
+          <li><a href="/pricing">pricing</a></li>
+          <li><a href="/login">log in</a></li>
+        {{ end }}
+      </ul>
+    </nav>
   </header>
