--- a/templates/domains.tmpl
+++ b/templates/domains.tmpl
@@ -1,6 +1,6 @@
 {{ range . }}
     <div class="domain">
-        <h3><a href="/host/{{ .Host }}">{{ .Host }}</a></h3>
+        <h3><a href="/domains/{{ .Host }}">{{ .Host }}</a></h3>
         <p>{{ .Key }}</p>
     </div>
 {{ else }}
