--- a/templates/new-domain.tmpl
+++ b/templates/new-domain.tmpl
@@ -1,5 +1,6 @@
 {{ template "head.tmpl" .User }}
 <form action="/new-domain" method="post">
+  {{ .csrfField }}
   <p><input type="text" name="host" required /></p>
   <p><button type="submit">Add domain</button></p>
 </form>
