--- a/templates/signup_form.tmpl
+++ b/templates/signup_form.tmpl
@@ -1,4 +1,5 @@
 <form action="/signup" method="post">
+  {{ .csrfField }}
   <p><input type="email" name="email" /></p>
   <p><input type="password" name="password" /></p>
   <p><button type="submit">Sign up</button></p>
