--- a/templates/foot.tmpl
+++ b/templates/foot.tmpl
@@ -1,3 +1,9 @@
 <footer>&copy; 2020 beep-beep.net. <a href="/privacy" title="Privacy policy">privacy</a>. <a href="/contact" title="Contact us">contact</a>.</footer>
+<img
+    alt="beep-beep traffic counter"
+    aria-hidden="true"
+    referrerpolicy="no-referrer-when-downgrade"
+    src="https://visit.beep-beep.net/[TOKEN].gif"
+    style="position: absolute; left:-9999em" />
 </body>
 </html>
