--- a/templates/head.tmpl
+++ b/templates/head.tmpl
@@ -13,6 +13,7 @@
     <h1><a href="/">beep beep</a></h1>
     <nav>
       <ul>
+        <li><a href="/about">about</a></li>
         {{ if . }}
           <li><a href="/account">{{ .Email }}</a></li>
           <li><a href="/logout">log out</a></li>
