--- a/templates/head.tmpl
+++ b/templates/head.tmpl
@@ -10,16 +10,19 @@
 </head>
 <body>
   <header>
-    <h1><a href="/">beep beep</a></h1>
+    <div class="site-name">
+      <h1><a href="/">beep beep</a></h1>
+      <p>kindness-focused web traffic counter</p>
+    </div>
     <nav>
       <ul>
-        <li><a href="/about">about</a></li>
+        <li><a href="/about">About</a></li>
         {{ if . }}
+          <li><a href="/">Domains</a></li>
           <li><a href="/account">{{ .Email }}</a></li>
-          <li><a href="/logout">log out</a></li>
         {{ else }}
-          <li><a href="/pricing">pricing</a></li>
-          <li><a href="/login">log in</a></li>
+          <li><a href="/pricing">Pricing</a></li>
+          <li><a href="/login">Log in</a></li>
         {{ end }}
       </ul>
     </nav>
