--- a/templates/domain_detail.tmpl
+++ b/templates/domain_detail.tmpl
@@ -6,7 +6,7 @@ Add the following snippet before the closing <code>&lt;/body&gt;</code> tag to c
     alt="beep-beep traffic counter"
     aria-hidden="true"
     referrerpolicy="no-referrer-when-downgrade"
-    src="https://visit.beep-beep.net/<var>{{ .Key }}</var>.gif"
+    src="https://visit.beep-beep.net/<strong><var>{{ .Key }}</var></strong>.gif"
     style="position: absolute; left:-9999em" /&gt;
 </pre></code>
 
