--- a/templates/head.tmpl
+++ b/templates/head.tmpl
@@ -12,7 +12,7 @@
   <header>
     <div class="site-name">
       <h1><a href="/">beep beep</a></h1>
-      <p>kindness-focused web traffic counter</p>
+      <p>be-nice web traffic counter</p>
     </div>
     <nav>
       <ul>
