--- a/templates/signup_form.tmpl
+++ b/templates/signup_form.tmpl
@@ -3,11 +3,11 @@
   <div class="flex flex-wrap">
     <div>
       <label for="email">Email</label>
-      <input type="email" name="email" placeholder="you@example.com" required />
+      <input type="email" name="email" id="email" placeholder="you@example.com" required />
     </div>
     <div>
       <label for="password">Password</label>
-      <input type="password" name="password" placeholder="••••••••" required />
+      <input type="password" name="password" id="password" placeholder="••••••••" required />
     </div>
     <div class="align-self-end">
       <button class="primary" type="submit">Sign up / Log in</button>
