--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,15 @@
+:root {
+  --theme-h: 146;
+  --theme-s: 77.6%;
+  --theme-l: 47.3%;
+  --theme: hsl(var(--theme-h), var(--theme-s), var(--theme-l));
+  --theme-hover: hsl(var(--theme-h), calc(var(--theme-s) + 12%), calc(var(--theme-l) - 6%));
+  --selection: hsla(var(--theme-h), calc(var(--theme-s) + 20%), calc(var(--theme-l) + 20%), 0.5);
+  --focus: var(--theme);
+  --links: #2374df;
+  --variable: hsl(var(--theme-h), calc(var(--theme-s) + 20%), calc(var(--theme-l) - 8%));
+}
+
 body > header {
   align-items: flex-end;
   display: flex;
@@ -12,7 +24,7 @@ body > header > .site-name {
   position: relative;
 }
 body > header > .site-name > h1 > a {
-  color: #1bd66d;
+  color: var(--theme);
 }
 body > header > .site-name > p {
   bottom: 0;
@@ -46,7 +58,29 @@ body > footer {
 }
 
 button.primary {
-  background: #1bd66d;
+  background: var(--theme);
   color: #fff;
   font-weight: bold;
+}
+button.primary:hover {
+  background: var(--theme-hover);
+}
+
+label {
+  color: #777;
+  display: block;
+  padding: 0 2px;
+}
+input, select, textarea, button {
+  border: 2px solid #ccc;
+  padding: 8px;
+}
+button:focus, input:focus, select:focus, textarea:focus {
+  background: var(--background-alt);
+  box-shadow: none;
+  border-color: var(--theme);
+}
+button {
+  border-color: transparent;
+  padding: 8px 26px;
 }
