hello redis from go

--- a/templates/domains.tmpl
+++ b/templates/domains.tmpl
@@ -1,7 +1,7 @@
 {{ range . }}
     <div class="domain">
         <h3><a href="/domains/{{ .Host }}">{{ .Host }}</a></h3>
-        <p>{{ .Key }}</p>
+        <p>{{ .Hits }}</p>
     </div>
 {{ else }}
     <p>no domains.</p>
