--- a/templates/foot.tmpl
+++ b/templates/foot.tmpl
@@ -3,7 +3,7 @@
     alt="beep-beep traffic counter"
     aria-hidden="true"
     referrerpolicy="no-referrer-when-downgrade"
-    src="https://visit.beep-beep.net/[TOKEN].gif"
+    src="http://localhost:3000/155a6b9790b90034.gif"
     style="position: absolute; left:-9999em" />
 </body>
 </html>
