--- a/templates/domain_detail.tmpl
+++ b/templates/domain_detail.tmpl
@@ -26,4 +26,6 @@ Add the following snippet before the closing <code>&lt;/body&gt;</code> tag to c
     style="position: absolute; left:-9999em" /&gt;
 </pre></code>
 
+<p><a href="/domains/delete?domain={{ .Host }}">Delete</a></p>
+
 {{ template "foot.tmpl" }}
