--- a/templates/chart_time_simple.tmpl
+++ b/templates/chart_time_simple.tmpl
@@ -5,20 +5,19 @@
       <stop offset="50%" stop-color="hsl(var(--theme-h), 40%, 84%)" /><!--mid-->
       <stop offset="100%" stop-color="var(--theme)" /><!--top-->
     </linearGradient>
-    <mask id="data" x="0" y="0" width="{{ .W }}" height="{{ .H }}" >
-      <g transform="scale(1, -1) translate(0, -{{ .H }})">
-        <polyline
-          class="line"
-          fill="none"
-          points="{{ range .Data.Scale .W .H true }}{{ .X }},{{ .Y }} {{ end }}"
-          stroke="var(--theme)"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          stroke-width="2"
-        />
-      </g>
+    <mask id="graph-data-simple-{{ .Name }}" x="0" y="0" width="{{ .W }}" height="{{ .H }}" >
+      <polyline
+        class="line"
+        fill="none"
+        points="{{ range .Data.Scale .W .H true }}{{ .X }},{{ .Y }} {{ end }}"
+        stroke="var(--theme)"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        stroke-width="2"
+        transform="scale(1, -1) translate(0, -{{ .H }})"
+      />
     </mask>
   </defs>
-  <rect x="0" y="-1" width="{{ .W }}" height="{{ .H }}" fill="url('#bg')" mask="url('#data')" />
+  <rect x="0" y="-1" width="{{ .W }}" height="{{ .H }}" fill="url(#bg)" mask="url(#graph-data-simple-{{ .Name }})" />
   </g>
 </svg>
